undo failed attempts at fixing input/textarea size on mobile chrome

--- a/style/std.css
+++ b/style/std.css
@@ -113,7 +113,7 @@ h3 {
 }
 
 input, textarea {
-  font-size: 18px;
+  font-size: .75em;
   padding: .5em;
   padding-bottom: .25em;
   background: #FFE2F2;
@@ -122,7 +122,6 @@ input, textarea {
   margin-bottom: .5em;
   width: 100%;
   color: blue;
-  max-height: 9999999px;
 }
 
 input:required, textarea:required {
